# eprofiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: AddLib.cmake  CompilerWarnings.cmake  README.md
eprofiler/: CMakeLists.txt
eprofiler/include/eprofiler/: eprofiler.hpp  linktimehashtable.hpp  string_constant.hpp  stringconstant.hpp  uniquetype.hpp
eprofiler/include/eprofiler/internal/: uniquetype.hpp
example/: CMakeLists.txt  main.cpp
example/src/: app.cpp
tests/: CMakeLists.txt  eprofiler.cpp  string_constant.cpp  stringconstant.cpp
tests/internal/: uniquetype.cpp
tests/src/: eprofiler.cpp  linktimehashtable.cpp  stringconstant.cpp
